--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_phone_iphone_black_24dp" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -22,7 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="35dp"
         android:layout_toEndOf="@+id/iv_android"
-        android:text="Android"
+        android:text="@string/item_name"
         android:textSize="24sp" />
 
 
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/tv_name"
         android:layout_below="@+id/tv_name"
+        android:layout_marginTop="12dp"
         android:text="25"
         android:textSize="18sp" />
 
@@ -51,7 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/btn_buy"
         android:layout_alignBottom="@+id/btn_buy"
-        android:layout_toStartOf="@+id/tv_stock"
+        android:layout_alignEnd="@+id/iv_android"
+        android:layout_marginEnd="14dp"
         android:text="Cancel" />
 
     <Spinner
@@ -59,6 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_name"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@+id/tv_stock" />
+        android:layout_marginStart="25dp"
+        android:layout_toEndOf="@+id/tv_stock"
+        android:textAlignment="center"
+        android:scrollbarSize="40dp"/>
 </RelativeLayout>
